<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="protocol">https</string>
    <string name="host">upnaexp.unavarra.es</string>
    <string name="port">19090</string>
    <string name="uri">/sigdroid-rest/resources/obtenerCalificaciones</string>
    <string name="showDemoButton">false</string>
    <string name="showConfigOption">true</string>
    <string name="authType">DNI</string>
    <string name="trustCert">false</string>
    <string name="universidad">UPNA</string>
    <string name="urlUni">http://www.unavarra.es/</string>
    <string name="idiomasDisponibles">es_ES;eu_ES;en_GB</string>
    <string name="idiomaDefecto">es_ES</string>
    <string name="hideCodigoCalificacionSinExamen">true</string>
    <string name="multicliente">N</string>
    <string name="demodata">{\"listaResultados\":[ {\"planDescripcion\":\"Ing.Téc.Industrial.Esp.: Química Industrial\",\"centroDescripcion\":\"Facultad de Ciencias\",\"estudioDescripcion\":\"Ingeniero Técnico Industrial\",\"creditosSuperados\":46.0,\"creditosTotalesPlan\":220.0,\"calificaciones\":[{\"tipoAsignatura\":\"Troncal\",\"creditos\":6.0,\"asignatura\":\"ÁLGEBRA\",\"calificacion\":\"Suspenso\",\"codCalificacion\":\"S\",\"presentaExamen\":true,\"superada\":false,\"time\":1297033200000,\"timeRevision\":1297465200000,\"convocatoria\":\"Febrero\",\"numConvocatoria\":1,\"nota\":4.0,\"provisional\":true,\"lugarRevision\":\"Aula 34\",\"horaRevision\":\"08:20\",\"anoAcademico\":\"2010/11-0\"},{\"tipoAsignatura\":\"Troncal\",\"creditos\":6.0,\"asignatura\":\"CÁLCULO\",\"calificacion\":\"Notable\",\"codCalificacion\":\"N\",\"presentaExamen\":true,\"superada\":true,\"time\":1296774000000,\"timeRevision\":1297724400000,\"convocatoria\":\"Febrero\",\"numConvocatoria\":1,\"nota\":7.1,\"provisional\":true,\"lugarRevision\":\"Despacho 230 \",\"horaRevision\":\"10:30\",\"anoAcademico\":\"2010/11-0\"},{\"tipoAsignatura\":\"Troncal\",\"creditos\":6.0,\"asignatura\":\"QUÍMICA ANALÍTICA\",\"calificacion\":\"Aprobado\",\"codCalificacion\":\"A\",\"presentaExamen\":true,\"superada\":true,\"time\":1296774000000,\"timeRevision\":1297292400000,\"convocatoria\":\"Febrero\",\"numConvocatoria\":1,\"nota\":6.5,\"provisional\":true,\"lugarRevision\":\"Laboratorio Química An. \",\"horaRevision\":\"09:00\",\"anoAcademico\":\"2010/11-0\"},{\"tipoAsignatura\":\"Optativa\",\"creditos\":6.0,\"asignatura\":\"ELECTROQUÍMICA INDUSTRIAL\",\"calificacion\":\"No consume\",\"codCalificacion\":\"NN\",\"presentaExamen\":false,\"superada\":false,\"time\":1284674400000,\"timeRevision\":0,\"convocatoria\":\"Septiembre\",\"numConvocatoria\":2,\"nota\":0.0,\"provisional\":false,\"anoAcademico\":\"2009/10-0\"},{\"tipoAsignatura\":\"Troncal\",\"creditos\":6.0,\"asignatura\":\"FÍSICA I\",\"calificacion\":\"Aprobado\",\"codCalificacion\":\"A\",\"presentaExamen\":true,\"superada\":true,\"time\":1235343600000,\"timeRevision\":0,\"convocatoria\":\"Febrero\",\"numConvocatoria\":1,\"nota\":5.3,\"provisional\":false,\"anoAcademico\":\"2008/09-0\"}]}, {\"planDescripcion\":\"Graduado/a en Física\",\"centroDescripcion\":\"Facultad de Ciencias\",\"estudioDescripcion\":\"Grado en Física\",\"creditosSuperados\":24.0,\"creditosTotalesPlan\":240.0,\"calificaciones\":[{\"tipoAsignatura\":\"Formación básica\",\"creditos\":6.0,\"asignatura\":\"FUNDAMENTOS DE FÍSICA II\u0009\",\"calificacion\":\"Suspenso\",\"codCalificacion\":\"S\",\"presentaExamen\":true,\"superada\":false,\"time\":1296774000000,\"timeRevision\":0,\"convocatoria\":\"Enero\",\"numConvocatoria\":1,\"nota\":2.6,\"provisional\":false,\"lugarRevision\":\" \",\"horaRevision\":\" \",\"anoAcademico\":\"2010/11-0\"}]} ], \"alumno\": {\"nia\":236996,\"documento\":\"5446402\",\"nombre\":\"Andres\",\"apellido1\":\"Pacheco\",\"apellido2\":\"Paniagua\"}, \"error\":0}</string>
    <string name="IdiomaCastellano">Castellano</string>
    <string name="IdiomaCatala">Català</string>
    <string name="IdiomaEuskera">Euskera</string>
    <string name="IdiomaIngles">English</string>
    <string name="app_name">Consulta de Notas</string>
    <string name="convocatoria">Convocatoria</string>
    <string name="calificacion">Calificación</string>
    <string name="nota">Nota</string>
    <string name="fecha_calificacion">Fecha de calificación</string>
    <string name="creditos">Creditos</string>
    <string name="anyo">Año</string>
    <string name="tipo_asignatura">Tipo de Asignatura</string>
    <string name="cambiar_password">¿Desea que la aplicación recuerde la contraseña?</string>
    <string name="recordar_password">¿Desea que la aplicación recuerde la contraseña?</string>
    <string name="mostrar_pwd">Mostrar contraseña</string>
    <string name="ocultar_pwd">Ocultar contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="falta_login">Debe introducir usuario y contraseña</string>
    <string name="bad_login">Usuario o contraseña incorrectos</string>
    <string name="conectando_servidor">Conectando</string>
    <string name="PorFavorEspere">Por favor, espere...</string>
    <string name="error_conexion">Error de conexión</string>
    <string name="error_http">El servidor ha devuelto un error</string>
    <string name="error_parser">Error parseando respuesta del servidor</string>
    <string name="error_guardar_pref">Error al guardar las preferencias.</string>
    <string name="error_cambiar_idioma">Error al cambiar el idioma.</string>
    <string name="fecha">Fecha</string>
    <string name="creditosTotalesPlan">Créditos mínimos del Plan</string>
    <string name="creditosSuperados">Superados</string>
    <string name="Salir">Salir</string>
    <string name="Configuracion">Opciones</string>
    <string name="NIA">NIA</string>
    <string name="DNI">DNI</string>
    <string name="LDAP">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="plan">Plan</string>
    <string name="revision">Revisión</string>
    <string name="f_calificacion">F. calificación</string>
    <string name="hora_revision">Hora Revisión de examen</string>
    <string name="fecha_revision">Fecha Revisión de examen</string>
    <string name="lugar_revision">Lugar Revisión de examen</string>
    <string name="demo">Demo</string>
    <string name="elige_idioma">Elige un idioma para la aplicación:</string>
    <string name="acerca_de">Acerca de</string>
    <string name="edicion">Edición:</string>
    <string name="urlVisita">Visítanos en:</string>
    <string name="urlSigma">www.gestionuniversitariasigma.com</string>
    <string name="copyright">© 2011 Gestión Universitaria SIGMA</string>
    <string name="Refrescar">Refrescar</string>
    <string name="OrdenarNovedad">Ordenar por novedad</string>
    <string name="OrdenarNombre">Ordenar por nombre</string>
    <string name="Cerrar">Cerrar</string>
    <string name="SinInformar">Sin informar</string>
    <string name="saludoNovedades">¿Qué novedades hay?</string>
    <string name="changelog_url">file:///android_asset/changelog-es.html</string>
</resources>
