<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_mida" android:enabled="true" android:id="@id/mainOrdenarNovedad" android:visible="true" android:title="@string/OrdenarNovedad" />
    <item android:icon="@drawable/ic_menu_alfa" android:enabled="true" android:id="@id/mainOrdenarAlfa" android:visible="false" android:title="@string/OrdenarNombre" />
    <item android:icon="@drawable/ic_menu_actualizar" android:enabled="true" android:id="@id/mainRefrescar" android:visible="true" android:title="@string/Refrescar" />
    <item android:icon="@drawable/ic_options" android:enabled="false" android:id="@id/mainConfig" android:visible="false" android:title="@string/Configuracion" />
    <item android:icon="@drawable/ic_about" android:enabled="true" android:id="@id/AcercaDe" android:visible="true" android:title="@string/acerca_de" />
    <item android:icon="@drawable/ic_menu" android:enabled="true" android:id="@id/mainSalir" android:visible="true" android:title="@string/Salir" />
</menu>