<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/app_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:src="@drawable/logo" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
            <EditText android:layout_gravity="center_horizontal" android:id="@id/login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="200.0dip" android:hint="@string/DNI" android:inputType="text" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
            <EditText android:layout_gravity="center_horizontal" android:id="@id/password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="200.0dip" android:hint="@string/password" android:inputType="textPassword" />
        </LinearLayout>
        <Button android:layout_gravity="center_horizontal" android:id="@id/Blogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aceptar" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:id="@id/demoLayer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <Button android:textStyle="bold" android:id="@id/Bdemo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/demo" />
    </LinearLayout>
</LinearLayout>